# Advanced-Programming

./: .gitignore  coi-serviceworker.js  home.html  home.js  index.html  tools.html
CoolCalculatorCS/: .gitignore  CoolCalculatorCS.sln  index.html
CoolCalculatorCS/CoolCalculatorCS/: CalculatorPrompt.cs  CoolCalculator.cs  OperationsQueue.cs
bootstrap/: 1.hello bootstrap.html  10.collapse.html  11.tooltip.html  12.forms.html  13.modal-box.html  2.text.html  3.colors.html  4.allert.html  5. button.html  7.container.html  8. padding-and-margin.html  9.table.html  icons.html  index.html  navbar.html  pagination.html  shadow.html  spinners.html  visibility.html  z-index.html
cmake/: README.md
cmake/step0_concepts/: cmake_intro.sh
cmake/step10_cpp_python/: CMakeLists.txt  demo.py  tutorial.sh
cmake/step10_cpp_python/include/: vec3.h
cmake/step10_cpp_python/src/: bindings.cpp  vec3.cpp
cmake/step11_cpp_java/: CMakeLists.txt  tutorial.sh
cmake/step11_cpp_java/src/com/tutorial/: Main.java  NativeMath.java
cmake/step11_cpp_java/src/jni/: native_math.cpp
cmake/step12_compiler_flags/: CMakeLists.txt  main.cpp  tutorial.sh
cmake/step13_variables_cache/: CMakeLists.txt  main.cpp  tutorial.sh
cmake/step14_cpp_java_python/: CMakeLists.txt  Hello.java  Hello.py  main.cpp
cmake/step1_hello_world/: CMakeLists.txt  main.c  tutorial.sh
cmake/step2_multiple_files/: CMakeLists.txt  main.c  math_utils.c  math_utils.h  tutorial.sh
cmake/step3_include_dirs/: CMakeLists.txt  tutorial.sh
cmake/step3_include_dirs/include/: string_utils.h
cmake/step3_include_dirs/src/: main.c  string_utils.c
cmake/step4_libraries/: CMakeLists.txt  main.c  tutorial.sh
cmake/step4_libraries/mylib/: CMakeLists.txt  vector.c  vector.h
cmake/step5_multilang/: CMakeLists.txt  cmath_bridge.c  cmath_bridge.h  cpp_analysis.cpp  cpp_analysis.h  main.cpp  tutorial.sh
cmake/step6_modular/: CMakeLists.txt  tutorial.sh
cmake/step6_modular/apps/: CMakeLists.txt  main.cpp
cmake/step6_modular/libs/: CMakeLists.txt
cmake/step6_modular/libs/geometry/: CMakeLists.txt  geometry.cpp  geometry.h
cmake/step6_modular/libs/io/: CMakeLists.txt  io.cpp  io.h
cmake/step7_fetchcontent/: CMakeLists.txt  main.cpp  tutorial.sh
cmake/step8_testing/: CMakeLists.txt  tutorial.sh
cmake/step8_testing/src/: math.cpp  math.h
cmake/step8_testing/tests/: CMakeLists.txt  test_basic.cpp  test_edge_cases.cpp
cmake/step9_install/: CMakeLists.txt  main.cpp  mylib.cpp  tutorial.sh
cmake/step9_install/include/: mylib.h
cpp-basics-tutorial/: README.md  build.sh  index.html  run_all.sh
cpp-basics-tutorial/step10_qualifiers/: 10a_const_qualifier.cpp  10b_constexpr.cpp
cpp-basics-tutorial/step11_rvalue_references/: 11a_lvalue_vs_rvalue.cpp  11b_rvalue_reference_and_move.cpp
cpp-basics-tutorial/step12_allocations/: 12a_new_vs_malloc.cpp  12b_new_array.cpp  12c_manual_memory_dangers.cpp
cpp-basics-tutorial/step13_smart_pointers/: 13a_unique_ptr.cpp  13b_shared_ptr.cpp  13c_weak_ptr.cpp
cpp-basics-tutorial/step14_templates/: 14a_function_template.cpp  14b_class_template.cpp  14c_non_type_template_param.cpp  14d_template_specialization.cpp  14e_default_template_args.cpp  14f_variadic_templates.cpp  14g_if_constexpr.cpp
cpp-basics-tutorial/step15_exceptions/: 15a_throw_catch.cpp  15b_std_exception_hierarchy.cpp  15c_raii_cleanup.cpp  15d_noexcept.cpp
cpp-basics-tutorial/step16_lambdas/: 16a_lambda_basics.cpp  16b_lambda_captures.cpp  16c_lambdas_with_algorithms.cpp  16d_lambda_internals.cpp
cpp-basics-tutorial/step17_casts/: 17a_static_cast.cpp  17b_dynamic_cast.cpp  17c_const_cast.cpp  17d_reinterpret_cast.cpp
cpp-basics-tutorial/step1_hello_world/: 01a_hello_world.cpp  01b_printf_vs_cout.cpp
cpp-basics-tutorial/step2_syntax_basics/: 02a_variables_and_init.cpp  02b_uniform_init_aggregate.cpp  02c_range_for_loop.cpp
cpp-basics-tutorial/step3_strings/: 03a_cstring_vs_string.cpp  03b_string_operations.cpp  03c_string_conversions.cpp
cpp-basics-tutorial/step4_bool/: 04a_bool_type.cpp
cpp-basics-tutorial/step5_auto/: 05a_auto_basics.cpp  05b_auto_caveats.cpp
cpp-basics-tutorial/step6_iostream/: 06a_cout_basics.cpp  06b_cin_basics.cpp  06c_iomanip_formatting.cpp
cpp-basics-tutorial/step7_overloading_defaults/: 07a_function_overloading.cpp  07b_default_parameters.cpp
cpp-basics-tutorial/step8_namespaces/: 08a_namespaces_basics.cpp  08b_using_directives.cpp
cpp-basics-tutorial/step9_pointers_vs_references/: 09a_references_intro.cpp  09b_pointer_vs_reference.cpp  09c_pass_by_x.cpp
cpp-oop-tutorial/: README.md  index.html  run_all.sh
cpp-oop-tutorial/step10_rule_of_five/: 10a_default_members.cpp  10b_rule_of_three.cpp  10c_move_semantics.cpp  10d_move_constructor.cpp  10f_rule_of_five.cpp  (+2 more)
cpp-stl-tutorial/: README.md  index.html
css/: README.md  index.html
data-structures/: avl-tree.html  b-tree.html  bst.html  dynamic-array.html  hash-table.html  heap.html  index.html  lab.css  lab.js  linked-list.html  queue.html  skip-list.html  stack-queue.html  stack.html  tree-scan.html  union-find.html
html/: README.md  lab.html
javascript/: async_await.js  closures.js  const_values.js  count_down.js  current_date.js  destructuring.js  fibonacci.js  fun_with_arrays.js  hello_world.js  index.html  let_vs_var.js  playing_with_objects.js
mongodb/: aggregate.mongo  create_db.mongo  find.mongo  hello_mongodb.mongo  index.html  indexing.mongo  insert_data.mongo
neo4j/: aggregations.cypher  create_nodes.cypher  dataset_movies.cypher  dataset_org.cypher  dataset_social.cypher  hello_neo4j.cypher  index.html  intro.cypher  match_where.cypher  merge.cypher  patterns.cypher  relationships.cypher  set_remove.cypher
react/: index.html
react-native/: ActivityIndicator.tsx  animation.tsx  http.tsx  image.tsx  index.html  list.tsx  login.tsx  picker.tsx  props.tsx  run.txt  state.tsx  style.tsx  switch.tsx
typescript/: brand.ts  casting.ts  conditinal_types.ts  data_structure.ts  generic.ts  hello_ts.ts  index.html  mapped_types.ts  numbers.ts  primitive_types.ts  special_types.ts  symbol.ts  type.ts
(+211 files in other folders)
